[tool.poetry]
name = "expensetracker"
version = "0.1.0"
description = ""
authors = ["Sophia Lawal <lawalsophia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-book-theme = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"